hphp/hack/test/typecheck/inout/bad_inout_decl_default.php.exp
File "bad_inout_decl_default.php", line 3, characters 28-30:
An 'inout' parameter must not have a default value. (Parsing[1002])
