hphp/hack/test/typecheck/inout/bad_inout_decl_default.php
<?hh

function test(inout int $i = 42): void {
}
